# ArgGIS

./: .gitattributes  .gitignore  Makefile  README.md  c-utils-v1.py  c-utils-v2.py  config.yaml  explore.ipynb  pyproject.toml  requirements.txt  scaffold.md
.todo/: plan.md
ArgGIS/: LICENSE  README.md  pyproject.toml
ArgGIS/metadata/datasets/: data_manifest.md  dataset_documentation.md  dataset_file_mapping.csv  dataset_manifest.yaml
ArgGIS/metadata/reserves/: reserves_2004_eoc.json  reserves_2004_eol.json  reserves_2005_eoc.json  reserves_2005_eol.json  reserves_2006_eoc.json  reserves_2006_eol.json  reserves_2007_eoc.json  reserves_2007_eol.json  reserves_2008_eoc.json  reserves_2008_eol.json  reserves_2009_eoc.json  reserves_2009_eol.json  reserves_2010_eoc.json  reserves_2010_eol.json  reserves_2011_eoc.json  reserves_2011_eol.json  reserves_2012_eoc.json  reserves_2012_eol.json  reserves_2013_eoc.json  reserves_2013_eol.json  reserves_2014_eoc.json  reserves_2014_eol.json  reserves_2015_eoc.json  reserves_2015_eol.json  reserves_2016_eoc.json  reserves_2016_eol.json  reserves_2017_eoc.json  reserves_2017_eol.json  reserves_2018_eoc.json  reserves_2018_eol.json  reserves_2019_eoc.json  reserves_2019_eol.json  reserves_2020_eoc.json  reserves_2020_eol.json  reserves_2021_eoc.json  reserves_2021_eol.json  (+4 more)
ArgGIS/notebooks/: reserve-visualization.py
ArgGIS/pipeline/: config.py  ingest.py  run.py
ArgGIS/scripts/: dl-data.py  reserve_manifest.py  summarize_files_llm.py
ArgGIS/tests/: test_transform.py
docs/: 0. Overview.md  1. Ingest.md  todo.md
(+27 files in other folders)
