[project]
name = "ArgGIS"
version = "0.1.0"
description = "To track production history of Argentina energy sector."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "affine==2.4.0",
    "attrs==25.3.0",
    "branca==0.8.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "contextily==1.6.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "et-xmlfile==2.0.0",
    "folium==0.19.5",
    "fonttools==4.56.0",
    "geographiclib==2.0",
    "geopandas==1.0.1",
    "geopy==2.4.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mercantile==1.2.1",
    "numpy==2.2.4",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pyogrio==0.10.0",
    "pyparsing==3.2.3",
    "pyproj==3.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rasterio==1.4.3",
    "requests==2.32.3",
    "rtree==1.4.0",
    "shapely==2.0.7",
    "six==1.17.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "xyzservices==2025.1.0",
    "fuzzywuzzy==0.18.0",
    "xlrd==2.0.1"
]

[project.scripts]
arg-transform = "bin.transform:main"

[tool.setuptools]
packages = ["ArgGIS"]

[tool.uv]
package = true
